--- a/app/src/main/res/layout/activity_note_editor.xml
+++ b/app/src/main/res/layout/activity_note_editor.xml
@@ -75,6 +75,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/hammersmith_one"
             android:gravity="start"
+            android:includeFontPadding="true"
             android:background="@color/white"
             android:inputType="textMultiLine"
             android:textSize="16sp" />
