--- a/app/src/main/res/layout/sample_notes.xml
+++ b/app/src/main/res/layout/sample_notes.xml
@@ -1,53 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginBottom="1dp"
-        android:layout_marginEnd="8dp"
-        app:cardElevation="1dp"
-        app:cardCornerRadius="12dp">
+    <data>
 
-        <LinearLayout
+        <variable
+            name="noteView"
+            type="com.example.notesapp.Note" />
+
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="#FDFAFA"
-            android:padding="16dp">
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="1dp"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="0dp">
 
-            <TextView
-                android:id="@+id/title"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-6dp"
-                android:fontFamily="@font/baloo"
-                android:includeFontPadding="false"
-                android:text="This is Title"
-                android:textColor="#656565"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:background="#F6F6F6"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-            <TextView
-                android:id="@+id/notes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/hammersmith_one"
-                android:text="this is the main Notes"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:ems="3"
+                    android:includeFontPadding="false"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:text='@{noteView.title, default = "Title"}'
+                    android:textColor="#171717"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/notes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:ems="5"
+                    android:scrollHorizontally="true"
+                    android:fontFamily="@font/hammersmith_one"
+                    android:maxLines="2"
+                    android:text='@{noteView.text, default = "saved notes"}'
+                    android:textColor="#5C5C5C"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
 
 
-    </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
+    </LinearLayout>
 
-</LinearLayout>
+</layout>
