--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,9 +3,12 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/amiko_bold</item>
         <item>@font/baloo</item>
+        <item>@font/belgrano</item>
         <item>@font/candal</item>
+        <item>@font/catamaran_semibold</item>
         <item>@font/coiny</item>
         <item>@font/droid_sans_bold</item>
         <item>@font/hammersmith_one</item>
+        <item>@font/jockey_one</item>
     </array>
 </resources>
